@@ -42,6 +42,9 @@ def main(argv = None):
                       type="int", default=7200)
     parser.add_option("--persist",
 		      help="make changes to disk contents persistent", action="store_true")
+    parser.add_option("--boot-from",
+		      help="boot from MEDIA (floppy/cdrom)", metavar="MEDIA")
+		      
 
     (options, args) = parser.parse_args()
 
@@ -70,10 +73,14 @@ def main(argv = None):
     else:
 	raise Usage("expected distribution URL or directory, got " + distarg)
 
-    a = anita.Anita(dist, workdir = options.workdir,
-        vmm = options.vmm, vmm_args = vmm_args,
-        disk_size = options.disk_size, memory_size = options.memory_size,
-	persist = options.persist)
+    a = anita.Anita(dist,
+        workdir = options.workdir,
+        vmm = options.vmm,
+	vmm_args = vmm_args,
+        disk_size = options.disk_size,
+	memory_size = options.memory_size,
+	persist = options.persist,
+	boot_from = options.boot_from)
 
     def maybe_run_command(child):
         if options.run:
